--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"astro": "^2.0.11",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"scrollreveal": "^4.0.9",
 		"tailwindcss": "^3.2.6"
 	}
 }
